stopgap for [#37714043]

--- a/static/less/sitewide.less
+++ b/static/less/sitewide.less
@@ -26,6 +26,11 @@
     a {
 	    font-size: 110%;
     }
+    
+    &.pale {
+        border-color: @blue-grey;
+        font-size: @font-size-default;
+    }
 }
 
 .preview_content {
